Fix typo in birthday invitation HTML

--- a/public/bdayinvite.html
+++ b/public/bdayinvite.html
@@ -10,7 +10,7 @@
     <ul>
         <li>Baloons (I love balloons :D)</li>
         <li>Cake</li>
-        <li>realy big gifts xD</li>
+        <li>really big gifts xD</li>
     </ul>
 </p>
 <p>
